default.css
/* ... */
.tooltip:after {
    position: absolute;
    top: -5px;
    left: 35px;
    content: " ";
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-bottom: 5px solid black;
}

.social-links {
    display: grid;
    align-content: center;
    text-align: center;
}

#social_img {
    width: 100%;
}

.post-wrapper {
    display: grid;
    grid-template-columns: repeat(auto-fit, 320px);
    gap: 20px;
    justify-content: center;
    padding-bottom: 50px;
}

.post {
    border: 1px solid var(--borderColor);
    -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
    box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
}

.post:hover {
    transform: translateY(0) scale(1.1);
}

.thumbnail {
    display: block;
    width: 100%;
    height: 180px;
    object-fit: cover;
    background-color: #f0f0f0; /* Placeholder color */
}

.post-preview {
    background-color: #fff;
    padding: 15px;
}

.post-title {
    color: black;
    margin: 0;
    text-align: center;
}

.post-intro {
    color: #4b5156;
    font-size: 14px;
}

#contact-form {
    display: block;
    max-width: 600px;
    margin: 0 auto;
    padding: 15px;
    border: 1px solid var(--borderColor);
    border-radius: 5px;
    background-color: var(--mainColor);
    margin-bottom: 50px;
}

#contact-form label {
    line-height: 2.7em;
}

#contact-form textarea {
    min-height: 100px;
    font-size: 14px;
}

.input-field {
    width: 98%;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: var(--secondaryColor);
    border-radius: 5px;
    border: 1px solid var(--borderColor);
    font-size: 14px;
}

.btn-container {
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

.btn-container button p {
    color: var(--mainText);
    font-family: "Russo One", sans-serif;
}

.btn-container button {
    font-size: 14px;
    overflow: visible;
    border-radius: 3px;
    position: relative;
    background-color: var(--buttonColor);
    border: 1px solid var(--borderColor);
    color: #fff;
    height: 20%;
    width: 30%;
    cursor: pointer;
}

.btn-container button:disabled {
    pointer-events: none;
}

.btn-container button::active {
    box-shadow: none;
    transform: translateY(0);
}

.btn-container button:hover {
    background-color: var(--buttonColor);
    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
    transform: translateY(-2px);
}

.btn-container button.clicked {
    background-color: #4bb543;
    border: 2px solid var(--borderColor);
    color: #4bb543;
    padding-right: 6px;
    -webkit-animation: bounce-in 0.3s;
    -moz-animation: bounce-in 0.3s;
    -o-animation: bounce-in 0.3s;
    -ms-animation: bounce-in 0.3s;
    animation: bounce-in 0.3s;
    cursor: default;
}

@media screen and (max-width: 1200px) {
    .main-container {
        width: 95%;
    }
}

@media screen and (max-width: 1000px) {
    .flow {
        min-height: 400px !important;
    }
}

@media screen and (max-width: 800px) {
    .intro-wrapper {
        grid-template-columns: 1fr;
        grid-template-areas:
            "nav-wrapper"
            "left-column"
            "right-column";
    }

    .right-column {
        justify-content: center;
    }

    .wall {
        justify-content: center;
    }

    .flow {
        min-height: 500px !important;
    }

    .container {
        display: block !important;
    }

    .container .tabs {
        display: flex !important;
        width: inherit !important;
        justify-content: center;
        align-items: center;
        margin-bottom: 10px;
    }

    .content {
        padding-left: 0 !important;
    }

    .content__section {
        padding-left: 0 !important;
    }

    .tab {
        border-bottom: 2px solid #5f6368;
        border-left: none !important;
        width: calc(100% / 4) !important;
    }

    .highlighter {
        height: 2px !important;
        width: calc(100% / 4) !important;
        top: 60px !important;
        transform: translateX(0px) !important;
    }

    .container .tabs .tab.tab-1.active ~ .highlighter {
        transform: translateX(0px) !important;
    }

    .container .tabs .tab.tab-2.active ~ .highlighter {
        transform: translateX(100%) !important;
    }

    .container .tabs .tab.tab-3.active ~ .highlighter {
        transform: translateX(200%) !important;
    }

    .container .tabs .tab.tab-4.active ~ .highlighter {
        transform: translateX(300%) !important;
    }

    #work__heading {
        margin-bottom: 14px !important;
    }
}

@media screen and (max-width: 600px) {
    .flow {
        min-height: 600px !important;
    }
}

@media screen and (max-width: 450px) {
    .greeting-wrapper h1 {
        word-spacing: 9999px;
    }
}

@media screen and (max-width: 400px) {
    #preview-shadow {
        max-width: 280px;
        height: 180px;
        padding-left: 10px;
        padding-top: 10px;
    }

    #preview {
        width: 280px;
    }

    .flow {
        min-height: 640px !important;
    }
}

.selected {
    background-color: var(--previewShadow);
}

.container {
    position: relative;
    margin: 20px 0;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden; /* Prevent internal scrolling */
}

.container .tabs {
    display: block;
    position: relative;
    z-index: 3;
    width: max-content;
}

.container .tabs .tab {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100px;
    height: 40px;
    text-align: center;
    font-weight: bold;
    font-size: 14px;
    padding: 10px 0;
    transition: all 0.25s ease;
    border-left: 2px solid #5f6368;
}

.tabs .tab span {
    cursor: pointer;
}

.container .tabs .tab:hover {
    background-color: var(--previewShadow);
}

.container .tabs .tab.active {
    color: #fff;
}
/* ... */

